# ChangeLog for app-emulation/xtrs
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/xtrs/ChangeLog,v 1.46 2012/11/30 06:35:21 lavajoe Exp $

  30 Nov 2012; Joe Peterson <lavajoe@gentoo.org> metadata.xml:
  Remove myself as a maintainer

  20 Nov 2012; Ulrich Müller <ulm@gentoo.org> -xtrs-4.9d.ebuild:
  Remove old.

  20 Nov 2012; Agostino Sarubbo <ago@gentoo.org> xtrs-4.9d-r1.ebuild:
  Stable for x86, wrt bug #441074

  04 Nov 2012; Agostino Sarubbo <ago@gentoo.org> xtrs-4.9d-r1.ebuild:
  Stable for amd64, wrt bug #441074

  03 Nov 2012; Anthony G. Basile <blueness@gentoo.org> xtrs-4.9d-r1.ebuild:
  stable ppc, bug #441074

*xtrs-4.9d-r1 (28 Sep 2012)

  28 Sep 2012; Ulrich Müller <ulm@gentoo.org> xtrs-4.9d.ebuild,
  +xtrs-4.9d-r1.ebuild, metadata.xml:
  Specify LICENSE more precisely. Install non-free LDOS/LS-DOS disk images for
  Model 4P only with USE=ldos.

  23 Dec 2010; Ulrich Mueller <ulm@gentoo.org> xtrs-4.9d.ebuild:
  Fix bug 337941 properly.

  18 Sep 2010; Ulrich Mueller <ulm@gentoo.org> -xtrs-4.9c-r2.ebuild,
  -files/xtrs-4.9c-gentoo.patch, -files/xtrs-4.9c-newdos-datetime.patch,
  xtrs-4.9d.ebuild:
  Respect LDFLAGS, bug 337941. Remove old.

  13 Jan 2010; Joe Peterson <lavajoe@gentoo.org> xtrs-4.9d.ebuild:
  Change SRC_URI of LS-DOS disk image (the old one no longer exists)

  09 Aug 2009; nixnut <nixnut@gentoo.org> xtrs-4.9d.ebuild:
  ppc stable #278051

  27 Jul 2009; <chainsaw@gentoo.org> xtrs-4.9d.ebuild:
  Marked stable on AMD64 as requested by Ulrich Müller <ulm@gentoo.org> in
  bug #278051. Tested to the standards described by Joe Peterson
  <lavajoe@gentoo.org> in http://bugs.gentoo.org/show_bug.cgi?id=181320#c0
  on a Core2 Duo.

  16 Jul 2009; Christian Faulhammer <fauli@gentoo.org> xtrs-4.9d.ebuild:
  stable x86, bug 278051

*xtrs-4.9d (17 Jun 2009)

  17 Jun 2009; Ulrich Mueller <ulm@gentoo.org> +xtrs-4.9d.ebuild:
  Version bump.
