@@ -1,5 +1,23 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST ld4-631.zip 106955 SHA256 06a093c42bd5c10b431239d52c1beb1360cc41dd09fa3849ed19fbc0706f1f1d SHA512 8c6a24bc0af9326b5b935d7cdb1932b4cb714ab336167fed36f4f6d976cd80fe1d4d6a76e6374366fdc3fce623b2bdd6f9059a964bd6d29f59d6a052a1924c4a WHIRLPOOL 6ecdfc85c2415976f564579f7403bccf37865183e4a62372e9fdb9189ff1923ee56b3dcc779a8cad398c0465c8ebe1daaa1b22bf7213ae0ad81d1dbc4c83a782
 DIST xtrs-4.9d.tar.gz 455355 SHA256 d309b83cf6fee5acfc063401c4506974647154841f37aa18cf145811575234d4 SHA512 5d6a2e1d4c2f2df63eaec8d015ea9e485615d82b7923af5c03c394862a31b1e6be2329aca18c0fa0c7d6b984164bb9b4d18f94a3d8cd140a683c5197ddff2249 WHIRLPOOL 9776dce7365e61b95c8921f22bb752ad0c77af3467c991436b578c3e18e34a431a237526ee893612e954efc517890b28d7726f2f118ea9e64fdd37f90a969d8d
 EBUILD xtrs-4.9d-r1.ebuild 2139 SHA256 ac02f13d938e2159bf3be2df52a86b716ce34c7915e5b6ba6b1b3cc3bdd5e6a1 SHA512 2e6a1c023fa42888295fea54381df5753da0a9e2008dcfed055fc7d8d62ba7937d7e5231f72fc6fadf8247a0e7ae3a35c694ac34022dfb8660736bd4a74d6b40 WHIRLPOOL 849b3ea443a87dfd41e40ce3264759d93cadba0676c6dd94275d8b2b4b4a737b6ccea3456c2e0d907674c57dc1e6e0774c90f09cfc2c56540b29425a6c68e465
-MISC ChangeLog 5770 SHA256 893211517d70aff391b8552d9f8549eb282da8ba9853fef3531f252dbc2acc45 SHA512 51f5fad8e38b9c5fcab4034f4dfcb7fd86ebc8d86d6cd60d7091a024aac35e13fe0af4fbc1b771606ca5004778ffc97b496170b91f8886deb6d36b375756f1f3 WHIRLPOOL 9fdcbdd5daa30a01b6a0d08a181d0e55c0807761d21f613c12dae26f71172010fe5ac3c4a060ed636e0504e4bf3b3bee765434d9a0e99a21a783345cbb24ed59
+EBUILD xtrs-4.9d-r2.ebuild 1946 SHA256 6c430e72de006ad302914468ce4ba7d9f71bec3bea20eb9b27d376857d211a2d SHA512 7c055737e1094bce760e73afc3da8e0b405bff14bbab608c11ddf42878b28731a6414c9b573897cb233e4905ac4a13301514267775d4f33cbb6d1b053326d619 WHIRLPOOL e1d9f4cc98c7d93cc988570b7bee5ac951b2d922eaffe19bd8397950236f67d6c28e452733a3e11e7dc89c37f24fc7e0e18cdd58105024ba99f7e056ba5bbb00
+MISC ChangeLog 5987 SHA256 bda616126eea728815871458edfdd67d3a6d2f5e6dc052de6b7b75ab0a2f55b2 SHA512 543308061d297fde966c65f0cc221ab709892e4929a3e46e776a6256786ee900149471afe1236307ab5d856f49040485116c746cafffe520e080502a20791d2f WHIRLPOOL 68815de19d9d8e3ce2d2e4847770769e5552a0489332e3f14a7919ac951febfe32b285a51e8be4ec39e16aef4c94092b272af15b326b87b2d7c4657927dc36aa
 MISC metadata.xml 1083 SHA256 44a62bc2a1da2825b4a234b3cbecc21aaafd409d4a992517772714cf8797503d SHA512 19092df552178d6261a6bd33fd4bb7b9aa293955a5975d5d5838018d9f9e392da7389dd19bc2dd9a71705e52cc1c151ab4299186c22559f21642e14f974f19ca WHIRLPOOL d0b3806da2396e5a1ccb1d98ac2441a20d8b551b33b44bcbccc5d067b8ce359182afb99ce59616e7ab0da6afac6893712f26ac25d86cf00c4342abc27d76993b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iQGcBAEBCAAGBQJS7A/oAAoJEJQzkH1pP7W4hQML/RbGHvEheKlLOnn7F0vRlLeY
+PddBDZtRh5RjGkf5QIIvCj79tDE835vuRNX2IafzeqHyHx9WvSkwsvjyp1xUUqvM
+iYh+OH8OCafFNB5LPh+dAG0ZiAnAI4CVo3MnTPt4E4yenHSnwVQdeFzCTUFbJx8v
+y4g4L/94I7jaq9/zjiMkXVSKGHAzlSHYzA0pSnoIAXrnfG9228K/kkJKAhWKd4za
+Cz35/zrDdCjhfhwsQioAPcx9tv/rS/FNvoRfplLCPCDalsy9cgPRF6zfSifW3V0+
+tcYv0rViw7RW38PNNORNVUkDFdsWGpB+3uE+bQZ+7va7xBRuj04jgJ3G0qhRYja9
+8FUWUnr4sKIl/Kt/KcZOsfDdQkKhi2aY4NOkTZcMdWP9ymu03N0m6VmX5ykXrb7+
+azRuX/jRlTRTOWhdNEcINgJnNu5+xh3m6NRqGMaX01u1t9gZkKtpbqLLymORS7z5
+aD7xWTimv6m6c28W6hPmk/F1YUOqND2xIUVjFElVUA==
+=YU83
+-----END PGP SIGNATURE-----
