@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install postinst prepare
+DEPEND=sys-libs/ncurses sys-libs/readline >=x11-libs/libX11-1.0.0
+DESCRIPTION=Radio Shack TRS-80 emulator
+EAPI=5
+HOMEPAGE=http://www.tim-mann.org/xtrs.html
+IUSE=ldos
+KEYWORDS=~amd64 ~ppc ~x86 ~x86-fbsd
+LICENSE=xtrs ldos? ( freedist )
+RDEPEND=sys-libs/ncurses sys-libs/readline >=x11-libs/libX11-1.0.0
+SLOT=0
+SRC_URI=http://www.tim-mann.org/trs80/xtrs-4.9d.tar.gz ldos? ( http://www.tim-mann.org/trs80/ld4-631.zip )
+_eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	flag-o-matic	62e05953761097ae84a70d6c7a3e2c9c	multilib	fac675dcccf94392371a6abee62d909f	readme.gentoo	2466b2f6a77a9600954c6b99ebca6e02	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=3ec6af392f3f705486724783e10dcea9
