@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/xtrs
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/xtrs/ChangeLog,v 1.46 2012/11/30 06:35:21 lavajoe Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/xtrs/ChangeLog,v 1.47 2014/01/31 20:59:32 ulm Exp $
+
+*xtrs-4.9d-r2 (31 Jan 2014)
+
+  31 Jan 2014; Ulrich Müller <ulm@gentoo.org> +xtrs-4.9d-r2.ebuild:
+  Use upstream default locations to look for ROM and disk files. Update ebuild
+  to EAPI 5. Inherit readme.gentoo.eclass.
 
   30 Nov 2012; Joe Peterson <lavajoe@gentoo.org> metadata.xml:
   Remove myself as a maintainer
